--- a/web/html/xui/form/protocol/vmess.html
+++ b/web/html/xui/form/protocol/vmess.html
@@ -1,15 +1,15 @@
 {{define "form/vmess"}}
 <a-form layout="inline">
-    <a-form-item label="id">
+    <a-form-item label="uuid">
         <a-input v-model.trim="inbound.settings.vmesses[0].id"></a-input>
     </a-form-item>
-    <a-form-item label="额外 ID">
+    <a-form-item label="alterID">
         <a-input type="number" v-model.number="inbound.settings.vmesses[0].alterId"></a-input>
     </a-form-item>
-    <a-form-item label="电子邮箱">
+    <a-form-item label="email">
         <a-input v-model.trim="inbound.settings.vmesses[0].email"></a-input>
     </a-form-item>
-    <a-form-item label="禁用不安全加密">
+    <a-form-item label="disableInsecure (X)">
         <a-switch v-model.number="inbound.settings.disableInsecure"></a-switch>
     </a-form-item>
 </a-form>
