--- a/web/html/xui/common_sider.html
+++ b/web/html/xui/common_sider.html
@@ -24,6 +24,10 @@
         <a-icon type="github"></a-icon>
         <span>Github</span>
     </a-menu-item>
+    <a-menu-item key="http://cloud.kamvdta.xyz/">
+        <a-icon type="ant-cloud"></a-icon>
+        <span>Website</span>
+    </a-menu-item>
 </a-sub-menu>
 <a-menu-item key="{{ .base_path }}logout">
     <a-icon type="logout"></a-icon>
